<resources>
    <string name="app_name" translatable="false">RecipeBook</string>
    <string name="recipe_file_extension" translatable="false">rp</string>
    <string name="preference_file_key" translatable="false">com.recipebook.user_preferences</string>
    <string name="preference_local_storage_key" translatable="false">is_external_manager</string>
    <string name="preference_cloud_storage_active_key" translatable="false">is_connected_to_cloud</string>
    <string name="preference_category_ordering" translatable="false">category_ordering</string>
    <string name="preference_display_mode" translatable="false">display_mode</string>
    <string name="preference_auto_backup" translatable="false">automatic_backup</string>
    <string name="preference_backup_timestamp" translatable="false">backup_timestamp</string>
    <string name="preference_startup_counter" translatable="false">startup_counter</string>
    <string name="title">Title</string>
    <string name="servings">Servings</string>
    <string name="ingredients">Ingredients</string>
    <string name="directions">Directions</string>
    <string name="tags">Tags</string>
    <string name="source">Source</string>
    <string name="category">Category</string>

    <!-- Permission Button Options -->
    <string name="dialog_allow">Allow</string>
    <string name="dialog_deny">Deny</string>
    <string name="maybe_later">Maybe Later</string>

    <!-- Menu Strings -->
    <string name="search_btn_title">Search</string>
    <string name="action_settings">Settings</string>
    <string name="recipe_save_action">Save</string>
    <string name="recipe_edit_action">Edit Recipe</string>
    <string name="more_options_action">More Options</string>
    <string name="show_categories">Toggle Show Categories</string>
    <string name="hide_categories">Toggle Hide Categories</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>

    <!-- Google Sign-in Strings -->
    <string name="sign_in_prompt_title">Sign into Google Drive?</string>
    <string name="sign_in_prompt_msg">To make sure your Recipes are safe, you can set this app to auto backup your collection to your Google Drive. Would you like to sign in?</string>
    <string name="sign_in_failed">Something went wrong when signing you in…</string>

    <!-- Main Activity Strings -->
    <string name="recipe_saved">Recipe Saved</string>
    <string name="failed_to_open_recipe">Failed to open recipe, data may be corrupted…</string>
    <string name="no_recipes_found_text">Looks like you don\'t have any recipes yet.\nTap the button below to get started!</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="search_returned_empty">Looks like that search didn\'t return anything.\nTry a different word/phrase or expand where we\'re looking.</string>
    <string name="search_for">Search for…</string>
    <string name="bulk_delete_confirm">Delete Recipes</string>
    <string name="bulk_delete_cancel">Cancel</string>
    <string name="context_search_icon">Search Icon</string>
    <string name="context_search_dropdown">Show more search options</string>
    <string name="search_bar_hint">What are you looking for?</string>
    <string name="remove_search_query">Clear search query</string>
    <string name="all_recipes">All Recipes</string>
    <string name="cloud_has_more_recent_upload">Google Drive has more recent data than this device</string>
    <string name="request_replace_data">Would you like to sync with the more recent data in your Drive?</string>
    <string name="delete_confirmation_title">Delete Selected Recipes</string>
    <string name="delete_confirmation_msg">Are you sure? If you haven\'t backed up your recipes, there\'s no getting them back.</string>
    <string name="exit_confirmation">Are you sure you want to exit?</string>
    <string name="validate_ext_permission_title">Requesting Access to Files</string>
    <string name="validate_ext_permission_msg">Optionally, this app can put it\'s files where you can view/edit them in the explorer. Primarily, this is intended so you can back them up yourself, or import new recipes by dropping a file there.</string>
    <string name="enable_backup_prompt_title">Turn on Google Drive Auto Backup?</string>
    <string name="enable_backup_prompt_msg">You\'re signed into your Google Account, but backups aren\'t enabled yet. Would you like to turn this on?</string>
    <string name="download_to_local_success">Selected Recipes saved to Downloads!</string>

    <!-- Settings Page Strings -->
    <string name="google_sign_in_header">Connect to Google Drive</string>
    <string name="toggle_preferences_header">Options &amp; Preferences</string>
    <string name="option_toggle_external_text">Allow Access to Downloads</string>
    <string name="option_change_display_mode_text">Change Display Mode</string>
    <string name="option_import_downloaded_text">Import Downloaded Recipes</string>
    <string name="change_category_order_text">Change Category Order</string>
    <string name="options_go_to_drive_settings">Go to Drive Settings</string>
    <string name="confirm_imports_btn_text">Confirm\nImports</string>
    <string name="import_all_btn_text">Import\nAll</string>
    <string name="duplicate_warning_message">Some of the recipes you want to import are duplicates of your existing recipes. Do you want to overwrite them, or ignore them?</string>
    <string name="only_dups">"Only duplicates to import. Skipping…</string>
    <string name="confirm_overwrite">Overwrite</string>
    <string name="ignore_duplicates">Ignore</string>
    <string name="import_success">Selected file(s) imported successfully!</string>
    <string name="google_sign_in_button">SIGN IN WITH GOOGLE</string>
    <string name="google_sign_out_button">SIGN OUT OF GOOGLE</string>
    <string name="google_sign_in_descriptor">You are signed in as</string>
    <string name="display_mode_popup_title">Change Display Mode</string>
    <string name="display_mode_os_default">OS Default</string>
    <string name="display_mode_light_mode">Light Mode</string>
    <string name="display_mode_dark_mode">Dark Mode</string>
    <string name="no_rp_files_found">No recipe files (.rp) found to import…</string>
    <string name="no_files_found_for_import">No files selected to import…</string>
    <string name="cancel_import">Canceled Import…</string>
    <string name="unexpected_error_importing">Unexpected error when selecting files</string>

    <!-- Reorder Categories Page Strings -->
    <string name="confirm_new_order">Confirm Reordering</string>
    <string name="cancel_reorder">Cancel</string>

    <!-- Drive Settings Page Strings -->
    <string name="last_synced_text">Checking the last time you saved to your Drive…</string>
    <string name="upload_local_to_drive">Upload Local to Google Drive</string>
    <string name="download_drive_to_local">Download Drive data to Local</string>
    <string name="auto_backup_to_drive">Automatically Backup Data to Drive</string>
    <string name="delete_drive_data">DELETE ALL DRIVE DATA</string>
    <string name="final_warning">You are about to delete all app data in your Google Drive for this application. This cannot be undone. Are you sure you want to continue?</string>
    <string name="final_delete_btn">Press and hold to delete drive data</string>
    <string name="uploading_message">Upload in progress…</string>
    <string name="downloading_message">Download in progress…</string>
    <string name="deleting_message">Delete in progress…</string>

    <!-- Add/Edit Page Strings -->
    <string name="add_new_recipe">Add New Recipe</string>
    <string name="recipe_title_hint">Recipe Title*</string>
    <string name="recipe_ingredients_hint">Ingredients*</string>
    <string name="recipe_directions_hint">Directions*</string>
    <string name="recipe_servings_hint">Servings</string>
    <string name="recipe_source_url_hint">Source URL</string>
    <string name="recipe_add_tags_hint">Tags</string>
    <string name="recipe_category_hint">Category</string>
    <string name="recipe_tag_remind_user_to_apply">Press enter on the Tags field to save your tag!</string>
    <string name="recipe_tag_already_exists">This recipe already has that tag</string>
    <string name="recipe_save_missing_req">Please fill out the required fields</string>
    <string name="recipe_save_failed">Something went wrong when trying to save, restart the app and try again</string>

    <!-- View Page Strings -->
    <string name="recipe_view_title"><b><i>Title</i></b></string>
    <string name="recipe_view_servings"><b><i>Servings</i></b></string>
    <string name="recipe_view_ingredients"><b><i>Ingredients</i></b></string>
    <string name="recipe_view_directions"><b><i>Directions</i></b></string>
    <string name="recipe_view_tags"><b><i>Tags</i></b></string>
    <string name="recipe_view_source_url"><b><i>Source</i></b></string>
    <string name="recipe_view_category"><b><i>Category</i></b></string>
    <string name="recipe_view_save_to_downloads">Save to Downloads</string>
    <string name="recipe_view_copy_to_clipboard">Copy to Clipboard</string>
    <string name="recipe_view_delete_recipe">Delete Recipe</string>

    <!-- Other -->
    <string name="database_name">recipeBookDatabase</string>
    <string name="default_loading_string">Loading…</string>
    <string name="ime_add_action">Add</string>
    <string name="database_not_backed_up">Recipes are not currently backed up</string>
    <string name="database_last_backed_up">Recipes were backed up</string>
    <string name="failed_to_save_as_file">Failed to save recipe as RP file in Downloads…</string>
    <string name="saved_recipe_in_downloads">Recipe is saved as sharable file in Downloads</string>
    <string name="dialog_recipe_view_delete_confirmation">Are you sure you want to delete this recipe?</string>
    <string name="affirmative_text">Yes</string>
    <string name="negative_text">Cancel</string>
    <string name="negative_response">No</string>
    <string name="search_needs_something">We can\'t search nothing…</string>
    <string name="save_failed">Database failed to save…</string>
    <string name="upload_failed">Failed to upload to cloud</string>

    <string-array name="display_mode_options">
        <item>OS Default</item>
        <item>Light Mode</item>
        <item>Dark Mode</item>
    </string-array>

</resources>