<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jaf.recipebook.ViewRecipeActivity">

    <item
        android:id="@+id/edit_recipe_btn"
        android:icon="@drawable/baseline_edit_24"
        android:orderInCategory="10"
        android:title="@string/recipe_edit_action"
        app:showAsAction="withText|ifRoom" />
    <item
        android:id="@+id/view_recipe_more_options"
        android:icon="@drawable/baseline_more_vert_24dp"
        android:orderInCategory="11"
        android:title="@string/more_options_action"
        app:showAsAction="withText|ifRoom" >

        <menu>

            <item
                android:id="@+id/view_recipe_copy_to_clipboard"
                android:title="@string/recipe_view_copy_to_clipboard" />
            <item
                android:id="@+id/view_recipe_save_to_downloads"
                android:title="@string/recipe_view_save_to_downloads" />
            <item
                android:id="@+id/view_recipe_delete_recipe"
                android:title="@string/recipe_view_delete_recipe" />

        </menu>
    </item>

</menu>