<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:rowCount="4"
    tools:context=".DriveSettingsActivity">

        <TextView
            android:id="@+id/drive_setting_last_updated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_synced_text"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/drive_setting_download_btn" />

        <ProgressBar
            android:id="@+id/drive_settings_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/drive_setting_last_updated" />

        <com.google.android.material.button.MaterialButton
            android:enabled="false"
            android:id="@+id/drive_setting_upload_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:drawableLeft="@android:drawable/stat_sys_upload"
            android:text="@string/upload_local_to_drive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:enabled="false"
            android:id="@+id/drive_setting_download_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_drive_to_local"
            android:layout_marginTop="24dp"
            android:drawableLeft="@android:drawable/stat_sys_download"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/drive_setting_upload_btn" />

        <com.google.android.material.button.MaterialButton
            android:enabled="false"
            android:id="@+id/drive_setting_delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/delete_drive_data"
            android:drawableLeft="@android:drawable/stat_sys_warning"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>