<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewRecipeActivity">

    <ScrollView
        android:id="@+id/view_recipe_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/view_ingredients_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="vertical" >

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/view_ingredients_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_view_ingredients"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/view_ingredients_body"
                    android:paddingStart="8dp"
                    android:paddingEnd="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_ingredients_header" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_directions_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_ingredients_container"
                android:orientation="vertical" >

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/view_directions_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_view_directions"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/view_directions_body"
                    android:paddingStart="8dp"
                    android:paddingEnd="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_directions_header" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_servings_container"
                android:layout_marginTop="16dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_directions_container"
                android:orientation="vertical" >

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/view_servings_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_view_servings"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/view_servings_body"
                    android:paddingStart="8dp"
                    android:paddingEnd="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_servings_header" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_source_container"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/view_servings_container"
                app:layout_constraintTop_toBottomOf="@+id/view_directions_container"
                android:orientation="vertical" >

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/view_source_url_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_view_source_url"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/view_source_url_body"
                    android:paddingStart="8dp"
                    android:paddingEnd="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_source_url_header" />

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/view_tags_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/recipe_view_tags"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_source_container" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/view_chipLayout_RecipeTags"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:divider="@color/transparent"
                android:orientation="horizontal"

                app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_tags_header"
                tools:itemCount="10"
                tools:listitem="@layout/view_chip"
                tools:orientation="horizontal" />

            <LinearLayout
                android:id="@+id/view_category_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_chipLayout_RecipeTags"
                android:orientation="vertical" >

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/view_category_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_view_category"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/view_category_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_category_header" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>